**************************************
*** Squirrelmail Stable Series 1.2 ***
**************************************

Version 1.2.8 -- cvs
--------------------
  - fix for multiple email addresses on the same message line
  - fix for "." on a single line in a text attachment bug #598750
  - Core code and plugins converted to work with register_globals Off
  - fix for reply quoting on resumed drafts
  - fix for fgets errors in file_prefs bug #578834
  - fix for date format on calendar day view bug #582919
  - fix for org. logo width/height values bug #572807
  - fix for reading/writing ldap prefs with conf.pl bug #57595
  - fix for 'fixed' font style in css bug #571463
  - fix for attachments in safe mode bug #585340
  - fixed forward attachment bug #585836
  - fix for php warning when saving drafts bug #585012
  - returned generic_header hook to page_header.php. bug #554278
  - fixed syntax error in darkness theme. bug #576066
  - fixed some attachments not being displayed. bug #577052
  - fixed matching uppercase headers on mailbox display. bug #584082
  - fixed folder names containing regex characters. bug #574889, #578156
  - fixed endless loop on raw binary data in email. bug #547662

Version 1.2.7 -- June 21, 2002
------------------------------
  - fix for 'compose as new' link. bug #554886
  - fix charset format in the admin plugin. bug #550725
  - fix for errant '.' in default_folder_prefix. bug #551310
  - fix for folder names with '?' and '*'. bug # 559257, #552180
  - added the ability to search without the charset argument. #552288
  - Made /noselect node display optional. bug #554988, patch #452178
  - Improved support for macosx IMAP server thanks Brian Haun
  - Added macosx friendly search, thanks Brian Haun bug #553038
  - Fixed word wrap problems when sending mail. bug #552961, #556143
  - Added possibility to use multiple compose windows without loss
    of attachements.
  - Fixed forward message/rfc822 attachments from a search 