@@ -4,6 +4,7 @@
 
 Version 1.2.8 -- cvs
 --------------------
+  - fix for X-MSMail-Priority conflict bug #600369
   - fix for multiple email addresses on the same message line
   - fix for "." on a single line in a text attachment bug #598750
   - Core code and plugins converted to work with register_globals Off
